# nvim

./: .gitignore  README.md  extClockType.h  init.lua
after/ftplugin/: Makefile.lua  cmake.lua  java.lua  lua.lua  python.lua
lua/: func.lua  init.lua  keymaps.lua  lazy-config.lua  nvim-tree-config.lua  options.lua  plugins.lua  skeletons.lua
lua/ThunderSloth/: init.lua  lazy.lua
lua/ThunderSloth/core/: autocmds.lua  commands.lua  init.lua  keymaps.lua
lua/ThunderSloth/plugins/: cmp.lua  habamax.lua  luasnip.lua  supertab.lua  telescope.lua  treesitter.lua  ts_filebrowser.lua  vimtex.lua
lua/core/: Makefile  autocmds.lua  commands.lua  func.lua  init.lua  keymaps.lua  options.lua
lua/plugins/: cmp.lua  colorschemes.lua  lspconfig.lua  luasnip.lua  neogen.lua  nvim-tree.lua  telescope.lua  treesitter.lua
lua/snippets/all/: pairs.lua
lua/snippets/all/utils/: init.lua
lua/snippets/tex/: enviro.lua  formatting.lua  functions.lua  images.lua  list.lua  operators.lua  symbols.lua  test.tex  tt.lua
lua/snippets/tex/utils/: context.lua  init.lua
snippets/: boilerplate.lua  lua.lua  tex.lua
snippets/tex/: list.lua  test.tex  tex.lua
spell/: en.utf-8.add  en.utf-8.add.spl
templates/: CMakeLists.txt  cpt210.py  skeleton.cpp  skeleton.h  skeleton.lua  skeleton.py  skeleton.tex  skeleton.txt  test.py
templates/tex/: Makefile
vscode/: settings.vim
